@@ -183,6 +183,8 @@ void get_screen_size_variables(game_logic::map_formula_callable& variable)
 {
 	variable.add("screen_width", variant(settings::screen_width));
 	variable.add("screen_height", variant(settings::screen_height));
+	variable.add("gamemap_width", variant(settings::gamemap_width));
+	variable.add("gamemap_height", variant(settings::gamemap_height));
 }
 
 game_logic::map_formula_callable get_screen_size_variables()
