@@ -149,8 +149,9 @@ std::string get_uid();
 /**
  * Gets a formula object with the screen size.
  *
- * @param variable                A formula object in which the screen_width
- *                                and screen_height variable will set to the
+ * @param variable                A formula object in which the screen_width,
+ *                                screen_height, gamemap_width and
+ *                                gamemap_height variable will set to the
  *                                current values of these in settings. It
  *                                modifies the object send.
  */
@@ -159,8 +160,9 @@ void get_screen_size_variables(game_logic::map_formula_callable& variable);
 /**
  * Gets a formula object with the screen size.
  *
- * @returns                       Formula object with the screen_width and
- *                                screen_height variable set to the current
+ * @returns                       Formula object with the screen_width,
+ *                                screen_height, gamemap_width and
+ *                                gamemap_height variable set to the current
  *                                values of these in settings.
  */
 game_logic::map_formula_callable get_screen_size_variables();
